# intricate

./: .gitignore  Cargo.toml  LICENSE  README.md  a.json  sonar-project.properties
.github/workflows/: sonar-build.yml  sonarcloud.yml
assets/shaders/: apply_gradients_to_layer_weights.wgsl
examples/mnist/: main.rs
examples/xor/: main.rs
intricate-macros/: Cargo.toml  README.md
intricate-macros/src/: lib.rs
intricate-macros/tests/: activation.rs  all.rs  layer_enum.rs
src/: lib.rs  main.rs  model.rs  model_gpu.rs  types.rs
src/datasets/: mnist.rs  mod.rs
src/density/: mod.rs
src/density/layers/: dense.rs  layer.rs  mod.rs
src/density/utils/: matrix_operations.rs  mod.rs
src/gpu/: apply_gradients_to_dense_weights.rs  calculate_dense_input_to_error_derivatives.rs  mod.rs  propagate_through_weights_and_biases.rs
src/gpu/shaders/: apply_gradients_to_dense_weights.wgsl  calculate_dense_input_to_error_derivatives.wgsl  propagate_through_weights_and_biases.wgsl
src/kernels/: model.cl
src/layers/: conv2d.rs  dense.rs  dense_gpu.rs  initializers.rs  layer.rs  mod.rs
src/layers/activations/: activation.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs  tanh_gpu.rs
src/layers/activations/kernels/: relu.cl  sigmoid.cl  softmax.cl  tanh.cl
src/layers/activations/tests/: mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/layers/kernels/: conv2d.cl  conv2d_propagation.cl  dense_back_propagation.cl  dense_gradient_application.cl  dense_gradient_applicator.cl  dense_propagation.cl
src/loss_functions/: categorical_cross_entropy.rs  categorical_cross_entropy_test.rs  loss_function.rs  mean_absolute.rs  mean_bias.rs  mean_squared.rs  mod.rs
src/loss_functions/kernels/: categorical_cross_entropy.cl  mean_absolute.cl  mean_bias.cl  mean_squared.cl
src/optimizers/: adagrad.rs  adagrad_test.rs  adam.rs  basic.rs  basic_test.rs  dummy.rs  mod.rs  momentum.rs  momentum_test.rs  nesterov.rs  nesterov_test.rs
src/optimizers/kernels/: adagrad.cl  adam.cl  momentum.cl  nesterov.cl
src/tests/: gpu_xor.rs  mod.rs  xor.rs
src/utils/: approx_eq.rs  buffer_operations.cl  matrix_operations.rs  mod.rs  opencl.rs  sum.cl  vector_operations.rs
src/utils/opencl/: buffer_like.rs  buffer_operations.rs  buffer_operations_test.rs  inplace_buffer_operations.rs  mod.rs  opencl_state.rs
src/utils/opencl/kernels/: buffer_operations.cl  inplace_buffer_operations.cl
