[package]
name = "intricate-macros"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["Gabriel Miranda"]
keywords = ["neural-networks", "machine-learning", "backpropagation"]
description = "The macros used for the Intricate library, a machine learning library with GPU acceleration written with OpenCL"
repository = "https://github.com/gabrielmfern/intricate"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
opencl3="0.8.1"
savefile-derive="0.10"
savefile="0.10"
intricate = { path = "../" }

[dependencies]
syn = "1.0.98"
quote = "1.0.20"