[package]
name = "intricate-macros"
version = "0.7.4"
edition = "2021"
license = "MIT"
authors = ["Gabriel Miranda"]
keywords = ["neural-networks", "machine-learning"]
description = "The macros used for the Intricate library, a machine learning library with GPU acceleration written with OpenCL"
readme = "README.md"
repository = "https://github.com/gabrielmfern/intricate"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
syn = "1.0.98"
quote = "1.0.20"